--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         <source src="Kya_Matlab.mp3" type="audio/mpeg">
       </audio>
     </div>
+    <a id="hintLink" href="hint.html" target="_blank">Need a hint?</a>
   </div>
-  <a id="hintLink" href="hint.html" target="_blank">Need a hint?</a>
+  <!-- <a id="hintLink" href="hint.html" target="_blank">Need a hint?</a> -->
 </div>
     </div>
   </div>
